--- a/views/login.ejs
+++ b/views/login.ejs
@@ -265,6 +265,10 @@
             ><i class="fab fa-google" style="margin-right: 10px"></i> continue
             with GOOGLE</a
           >
+          <a class="google" href="/auth/facebook"
+            ><i class="fab fa-google" style="margin-right: 10px"></i> continue
+            with FaceBook</a
+          >
           <!-- don't have account -->
           <p
             class="exist"
