--- a/views/register.ejs
+++ b/views/register.ejs
@@ -265,6 +265,10 @@
             ><i class="fab fa-google" style="margin-right: 10px"></i> sign up
             with GOOGLE</a
           >
+          <a class="google" href="/auth/facebook"
+            ><i class="fab fa-facebook" style="margin-right: 10px"></i> sign up
+            with FaceBook</a
+          >
           <p
             class="exist"
             style="font-size: 1.1rem; text-align: center; margin-top: 10px"
