--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -17,7 +17,7 @@
       }
 
       body {
-        background-image: url("https://cdn1.photostockeditor.com/c/2812/black-white-pencil-on-black-platform-background-background-image.jpg");
+        background-image: url("https://images.unsplash.com/photo-1554050857-c84a8abdb5e2?ixlib=rb-1.2.1&w=1080&fit=max&q=80&fm=jpg&crop=entropy&cs=tinysrgb");
         background-size: cover;
         font-family: sans-serif;
       }
@@ -41,8 +41,7 @@
       }
 
       .dropdown {
-        position: relative;
-        display: inline-block;
+        display: flex;
       }
 
       .profile {
@@ -116,7 +115,6 @@
         width: 100%;
         display: flex;
         justify-content: space-between;
-        /* align-items: start; */
       }
 
       .written-by {
@@ -224,6 +222,7 @@
       .btn-delete {
         background-color: rgba(0,0,0,0.8);
         color: gold;
+        border: none;
         font-size: 1.2rem;
       }
 
@@ -235,8 +234,12 @@
           right: 5px;
         }
 
+        .dropdown {
+          margin: 0px !important;
+        }
+
         .head {
-          font-size: 2rem;
+          font-size: 1.6rem;
           margin-left: 0px;
         }
 
