--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -17,7 +17,7 @@
       }
 
       body {
-        background-image: url("https://i.pinimg.com/736x/6e/5a/9b/6e5a9b7514899500000d31e685c3e0a3.jpg");
+        background-image: url("https://images.unsplash.com/photo-1554050857-c84a8abdb5e2?ixlib=rb-1.2.1&w=1080&fit=max&q=80&fm=jpg&crop=entropy&cs=tinysrgb");
         font-family: sans-serif;
       }
 
@@ -150,8 +150,13 @@
         }
 
         .head {
-          font-size: 2rem;
+          font-size: 1.6rem;
           margin-left: 0px;
+        }
+
+        input {
+          margin-bottom: 10px;
+          font-size: 0.8rem !important;
         }
 
         .blogs {
