--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,8 +23,12 @@
 
       .top {
         height: 100vh !important;
-        background-image: url("https://i.pinimg.com/736x/6e/5a/9b/6e5a9b7514899500000d31e685c3e0a3.jpg");
+        padding: 0px;
+        background-image: url("https://media.istockphoto.com/photos/product-showcase-with-spotlight-black-studio-room-background-use-as-picture-id1304681590?b=1&k=20&m=1304681590&s=170667a&w=0&h=UlTsdL4KIRPcxbhgOrsIoE0BNNE6KpgxVhRD3gz_fV0=");
+        background-repeat: no-repeat;
+        background-size: cover;
       }
+
       .nav {
         position: fixed;
         right: 0;
@@ -334,6 +338,7 @@
 
         section {
           overflow: auto;
+          padding: 10px;
           height: auto !important;
         }
         .head {
@@ -390,12 +395,12 @@
         <h1 class="head">CAMPUS AMBASSADOR</h1>
         <div class="dropdown" style="margin-right: 15px">
           <a class="profile" id="profile" href="#home">Home</a>
-          <a class="profile" id="profile" href="#register">Register</a>
+          <a class="profile" id="profile" href="#aboutus">About Us</a>
           <a class="profile" id="profile" href="#whyca">Why CA?</a>
           <a class="profile" id="profile" href="#responsibilities"
             >Responsibilities</a
           >
-          <a class="profile" id="profile" href="#aboutus">About Us</a>
+          <a class="profile" id="profile" href="#register">Register</a>
           <a class="profile" id="profile" href="#contactus">Contact Us</a>
         </div>
       </nav>
