--- a/views/login.ejs
+++ b/views/login.ejs
@@ -145,6 +145,18 @@
           height: 100%;
         }
 
+        .head {
+          font-size: 1.5rem;
+        }
+        .dropdown {
+          margin: 0px !important;
+        }
+
+        .profile {
+          font-size: 1rem;
+          margin: 0px !important;
+        }
+
         .cont {
           flex-direction: column;
           width: 100%;
