--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -265,8 +265,9 @@
           padding: 10px;
         }
 
-        .protfolio {
-          display: none;
+        .indos {
+          flex-direction: column-reverse;
+          align-items: center;
         }
       }
     </style>
@@ -287,6 +288,7 @@
 
     <section
       style="display: flex; justify-content: center;"
+      class="indos"
     >
       <div class="blogs">
         <!-- all articles -->
