--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
       referrerpolicy="no-referrer"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog site</title>
+    <title>Techkriti</title>
 
     <style>
       * {
@@ -20,45 +20,172 @@
       body {
         font-family: sans-serif;
         height: 100vh;
-        background-image: url("https://i.pinimg.com/736x/6e/5a/9b/6e5a9b7514899500000d31e685c3e0a3.jpg");
+        /* background-image: url("https://i.pinimg.com/736x/6e/5a/9b/6e5a9b7514899500000d31e685c3e0a3.jpg"); */
+        background-image: url("https://ca.techkriti.org/assets/images/flicker.jpg");
+        background-size: cover;
+        background-repeat: no-repeat;
       }
 
-      .nav {
-        max-width: 100%;
+      .navbar {
+        background-color: black;
+        height: 80px;
+        font-size: 1.2rem;
+        position: sticky;
+        top: 0;
+        z-index: 999;
+      }
+
+      #button {
+        color: white;
+      }
+
+      .navbar-container {
         display: flex;
-        align-items: center;
         justify-content: space-between;
-        box-shadow: 15px 2px 2px white;
-        border-bottom: 3px solid black;
-        background-color: rgba(0, 0, 0, 0.7);
-        padding: 10px;
-        height: 50px;
+        align-items: center;
+        height: 80px;
+        max-width: 1500px;
       }
 
-      .head {
-        font-size: 2.2rem;
+      .navbar-logo {
         color: #fff;
-        font-weight: 600;
-        font-family: monospace;
-        margin-left: 15px;
-        text-decoration: none;
-      }
-
-      .head:hover {
-        text-decoration: underline;
-        color: gold;
-      }
-
-      .dropdown {
-        position: relative;
-        display: inline-block;
-      }
-
-      .profile {
-        color: #fff;
+        justify-self: start;
+        margin-left: 30px;
+        cursor: pointer;
         text-decoration: none;
         font-size: 2rem;
-        margin-left: 30px;
+        display: flex;
+        align-items: center;
+      }
+      .icon {
+        content: url("../../assets/images/logo.png");
+        height: 150px;
+        width: 300px;
+        color: #fff;
+      }
+
+      .nav-menu {
+        display: grid;
+        grid-template-columns: repeat(10, auto);
+        grid-gap: 10px;
+        list-style: none;
+        text-align: center;
+        width: 60vw;
+        justify-content: end;
+        margin-right: 2rem;
+      }
+
+      .nav-item {
+        height: 80px;
+      }
+
+      .nav-links {
+        color: #fff;
+        font-weight: bold;
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        padding: 0.5rem 1rem;
+        height: 100%;
+      }
+
+      .nav-links:hover {
+        border-bottom: 4px solid #fff;
+        transition: all 0.2s ease-out;
+      }
+
+      .fa-bars {
+        color: #fff;
+      }
+
+      .nav-links-mobile {
+        display: none;
+      }
+
+      .menu-icon {
+        display: none;
+      }
+
+      @media screen and (max-width: 960px) {
+        .NavbarItems {
+          position: relative;
+        }
+
+        .nav-menu {
+          display: flex;
+          flex-direction: row;
+          width: 100%;
+          height: 90vh;
+          position: absolute;
+          top: 80px;
+          left: -100%;
+          opacity: 1;
+          transition: all 0.5s ease;
+        }
+
+        .nav-menu.active {
+          background: #242222;
+          left: 0;
+          opacity: 1;
+          transition: all 0.5s ease;
+          z-index: 1;
+        }
+
+        .nav-links {
+          text-align: center;
+          padding: 2rem;
+          width: 100%;
+          display: table;
+        }
+
+        .nav-links:hover {
+          background-color: #fff;
+          color: #242424;
+          border-radius: 0;
+        }
+
+        .navbar-logo {
+          position: absolute;
+          top: 0;
+          left: 0;
+          transform: translate(25%, 50%);
+        }
+
+        .menu-icon {
+          display: block;
+          position: absolute;
+          top: 0;
+          right: 0;
+          transform: translate(-100%, 60%);
+          font-size: 1.8rem;
+          cursor: pointer;
+        }
+
+        .fa-times {
+          color: #fff;
+          font-size: 2rem;
+        }
+
+        .nav-links-mobile {
+          display: block;
+          text-align: center;
+          margin: 2rem auto;
+          border-radius: 4px;
+          width: 80%;
+          text-decoration: none;
+          font-size: 1.5rem;
+          background-color: transparent;
+          color: #fff;
+          padding: 14px 20px;
+          border: 1px solid #fff;
+          transition: all 0.3s ease-out;
+        }
+
+        .nav-links-mobile:hover {
+          background: #fff;
+          color: #242424;
+          transition: 250ms;
+        }
       }
 
       .register-section {
@@ -184,10 +311,17 @@
   </head>
 
   <body>
-    <nav class="nav" id="nav">
-      <a class="head" href="/">CAMPUS AMBASSADOR</a>
-      <div class="dropdown" style="margin-right: 15px">
-        <a class="profile" id="profile">Login</a>
+    <nav class="navbar">
+      <div class="navbar-container">
+        <h1 style="color: white; margin-left: 10px">Campus Ambassador</h1>
+        <div style="display: flex">
+          <a href="/" class="nav-links">Home</a>
+          <a href="#" class="nav-links">Details</a>
+          <a href="#" class="nav-links">Impetus</a>
+          <a href="/incentives" class="nav-links">Incentives</a>
+          <a href="/contactus" class="nav-links">Contact-us</a>
+          <a href="/register" class="nav-links">Register</a>
+        </div>
       </div>
     </nav>
     <section class="register-section">
