--- a/views/home.ejs
+++ b/views/home.ejs
@@ -403,10 +403,12 @@ font-weight: 600;
   }
 
   .testimonials{
-    margin-top: 2%;
-    padding: 0 5%;
-    font-weight: 600;
+    padding: 50px;
     background-color: #1c1d21;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     text-align: center;
 }
 
@@ -471,10 +473,10 @@ font-weight: 600;
 .carousel-indicators {
     bottom:-50px;
   }
-
+/* 
 .carousel-inner {
     margin-bottom:50px;
- }
+ } */
  
  .fa-brands {
   color: white;
@@ -555,16 +557,16 @@ font-weight: 600;
                 <h1 class="heading">TESTIMONIALS</h1>
                 <hr>
                 <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
+                    <!-- <div class="carousel-indicators">
                       <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                       <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
                       <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    </div>
+                    </div> -->
                     <div class="carousel-inner">
                       <div class="carousel-item active" data-bs-interval="10000">
                         <div class="row">
                     <div class="col-lg-3 card">
-                        <img src="imgs/profile2.jpg" class="profile-img" alt="">
+                        <img src="https://raw.githubusercontent.com/ShivamIITK21/Testimonials-CA/master/imgs/profile2.jpg" class="profile-img" alt="">
                         <p class="card-content"><i class="fa-solid fa-quote-left icon fa-2x"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium labore consequuntur minima sit? At, eaque minus omnis explicabo mollitia reprehenderit dolorem alias, vitae culpa neque adipisci quibusdam sequi, architecto molestiae!<i class="fa-solid fa-quote-right icon fa-2x"></i></p>
                         <h2 class="name">John Doe</h2>
                         <div class="contacts">
@@ -574,7 +576,7 @@ font-weight: 600;
                         </div>
                     </div>
                     <div class="col-lg-3 card">
-                        <img src="imgs/profile2.jpg" class="profile-img" alt="">
+                        <img src="https://raw.githubusercontent.com/ShivamIITK21/Testimonials-CA/master/imgs/profile2.jpg" class="profile-img" alt="">
                         <p class="card-content"><i class="fa-solid fa-quote-left icon fa-2x"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium labore consequuntur minima sit? At, eaque minus omnis explicabo mollitia reprehenderit dolorem alias, vitae culpa neque adipisci quibusdam sequi, architecto molestiae!<i class="fa-solid fa-quote-right icon fa-2x"></i></p>
                         <h2 class="name">John Doe</h2>
                         <div class="contacts">
@@ -584,7 +586,7 @@ font-weight: 600;
                         </div>
                     </div>
                     <div class="col-lg-3 card">
-                        <img src="imgs/profile2.jpg" class="profile-img" alt="">
+                        <img src="https://raw.githubusercontent.com/ShivamIITK21/Testimonials-CA/master/imgs/profile2.jpg" class="profile-img" alt="">
                         <p class="card-content"><i class="fa-solid fa-quote-left icon fa-2x"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium labore consequuntur minima sit? At, eaque minus omnis explicabo mollitia reprehenderit dolorem alias, vitae culpa neque adipisci quibusdam sequi, architecto molestiae!<i class="fa-solid fa-quote-right icon fa-2x"></i></p>
                         <h2 class="name">John Doe</h2>
                         <div class="contacts">
@@ -598,7 +600,7 @@ font-weight: 600;
                       <div class="carousel-item" data-bs-interval="2000">
                         <div class="row">
                             <div class="col-lg-3 card">
-                                <img src="imgs/profile2.jpg" class="profile-img" alt="">
+                                <img src="https://raw.githubusercontent.com/ShivamIITK21/Testimonials-CA/master/imgs/profile2.jpg" class="profile-img" alt="">
                                 <p class="card-content"><i class="fa-solid fa-quote-left icon fa-2x"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium labore consequuntur minima sit? At, eaque minus omnis explicabo mollitia reprehenderit dolorem alias, vitae culpa neque adipisci quibusdam sequi, architecto molestiae!<i class="fa-solid fa-quote-right icon fa-2x"></i></p>
                                 <h2 class="name">John Doe</h2>
                                 <div class="contacts">
@@ -608,7 +610,7 @@ font-weight: 600;
                                 </div>
                             </div>
                             <div class="col-lg-3 card">
-                                <img src="imgs/profile2.jpg" class="profile-img" alt="">
+                                <img src="https://raw.githubusercontent.com/ShivamIITK21/Testimonials-CA/master/imgs/profile2.jpg" class="profile-img" alt="">
                                 <p class="card-content"><i class="fa-solid fa-quote-left icon fa-2x"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium labore consequuntur minima sit? At, eaque minus omnis explicabo mollitia reprehenderit dolorem alias, vitae culpa neque adipisci quibusdam sequi, architecto molestiae!<i class="fa-solid fa-quote-right icon fa-2x"></i></p>
                                 <h2 class="name">John Doe</h2>
                                 <div class="contacts">
@@ -618,7 +620,7 @@ font-weight: 600;
                                 </div>
                             </div>
                             <div class="col-lg-3 card">
-                                <img src="imgs/profile2.jpg" class="profile-img" alt="">
+                                <img src="https://raw.githubusercontent.com/ShivamIITK21/Testimonials-CA/master/imgs/profile2.jpg" class="profile-img" alt="">
                                 <p class="card-content"><i class="fa-solid fa-quote-left icon fa-2x"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium labore consequuntur minima sit? At, eaque minus omnis explicabo mollitia reprehenderit dolorem alias, vitae culpa neque adipisci quibusdam sequi, architecto molestiae!<i class="fa-solid fa-quote-right icon fa-2x"></i></p>
                                 <h2 class="name">John Doe</h2>
                                 <div class="contacts">
@@ -632,7 +634,7 @@ font-weight: 600;
                       <div class="carousel-item">
                         <div class="row">
                             <div class="col-lg-3 card">
-                                <img src="imgs/profile2.jpg" class="profile-img" alt="">
+                                <img src="https://raw.githubusercontent.com/ShivamIITK21/Testimonials-CA/master/imgs/profile2.jpg" class="profile-img" alt="">
                                 <p class="card-content"><i class="fa-solid fa-quote-left icon fa-2x"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium labore consequuntur minima sit? At, eaque minus omnis explicabo mollitia reprehenderit dolorem alias, vitae culpa neque adipisci quibusdam sequi, architecto molestiae!<i class="fa-solid fa-quote-right icon fa-2x"></i></p>
                                 <h2 class="name">John Doe</h2>
                                 <div class="contacts">
@@ -642,7 +644,7 @@ font-weight: 600;
                                 </div>
                             </div>
                             <div class="col-lg-3 card">
-                                <img src="imgs/profile2.jpg" class="profile-img" alt="">
+                                <img src="https://raw.githubusercontent.com/ShivamIITK21/Testimonials-CA/master/imgs/profile2.jpg" class="profile-img" alt="">
                                 <p class="card-content"><i class="fa-solid fa-quote-left icon fa-2x"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium labore consequuntur minima sit? At, eaque minus omnis explicabo mollitia reprehenderit dolorem alias, vitae culpa neque adipisci quibusdam sequi, architecto molestiae!<i class="fa-solid fa-quote-right icon fa-2x"></i></p>
                                 <h2 class="name">John Doe</h2>
                                 <div class="contacts">
@@ -652,7 +654,7 @@ font-weight: 600;
                                 </div>
                             </div>
                             <div class="col-lg-3 card">
-                                <img src="imgs/profile2.jpg" class="profile-img" alt="">
+                                <img src="https://raw.githubusercontent.com/ShivamIITK21/Testimonials-CA/master/imgs/profile2.jpg" class="profile-img" alt="">
                                 <p class="card-content"><i class="fa-solid fa-quote-left icon fa-2x"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium labore consequuntur minima sit? At, eaque minus omnis explicabo mollitia reprehenderit dolorem alias, vitae culpa neque adipisci quibusdam sequi, architecto molestiae!<i class="fa-solid fa-quote-right icon fa-2x"></i></p>
                                 <h2 class="name">John Doe</h2>
                                 <div class="contacts">
