--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -17,6 +17,9 @@
         margin: 0px;
         padding: 0px;
       }
+      body {
+        font-family: sans-serif;
+      }
       .navbar {
         background-color: black;
         height: 80px;
@@ -33,6 +36,7 @@
       .navbar-container {
         display: flex;
         justify-content: space-between;
+        margin: 0px 40px;
         align-items: center;
         height: 80px;
         max-width: 1500px;
@@ -294,7 +298,6 @@
               <div style="display: flex">
                 <a href="/" class="nav-links">Home</a>
                 <a href="#" class="nav-links">Details</a>
-                <a href="#" class="nav-links">Impetus</a>
                 <a href="/incentives" class="nav-links">Incentives</a>
                 <a href="/contactus" class="nav-links">Contact-us</a>
                 <a href="/register" class="nav-links">Register</a>
