--- a/views/home.ejs
+++ b/views/home.ejs
@@ -44,6 +44,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        margin: 0px 40px;
         width: 100%;
         max-width: 1500px;
       }
@@ -480,18 +481,19 @@ font-weight: 600;
  
  .fa-brands {
   color: white;
- }
+  margin: 0px 5px;
+}
+.fa-2x{font-size: 1.8em !important;}
     </style>
   </head>
 
   <body>
     <nav class="navbar">
       <div class="navbar-container">
-        <h1 style="color: white; margin-left: 10px">Campus Ambassador</h1>
+        <img src="https://raw.githubusercontent.com/pmaurya355/react/master/src/assets/images/logo.png" height="80" width="200">
         <div style="display: flex">
           <a href="#home" class="nav-links">Home</a>
           <a href="#" class="nav-links">Details</a>
-          <a href="#" class="nav-links">Impetus</a>
           <a href="/incentives" class="nav-links">Incentives</a>
           <a href="/contactus" class="nav-links">Contact-us</a>
           <a href="/register" class="nav-links">Register</a>
