--- a/views/login.ejs
+++ b/views/login.ejs
@@ -42,6 +42,7 @@
       .navbar-container {
         display: flex;
         justify-content: space-between;
+        margin: 0px 40px;
         align-items: center;
         height: 80px;
         max-width: 1500px;
@@ -317,7 +318,6 @@
         <div style="display: flex">
           <a href="/" class="nav-links">Home</a>
           <a href="#" class="nav-links">Details</a>
-          <a href="#" class="nav-links">Impetus</a>
           <a href="/incentives" class="nav-links">Incentives</a>
           <a href="/contactus" class="nav-links">Contact-us</a>
           <a href="/register" class="nav-links">Register</a>
