--- a/views/incentives.ejs
+++ b/views/incentives.ejs
@@ -19,6 +19,9 @@
       margin: 0;
       padding: 0;
     }
+    body {
+      font-family: sans-serif;
+    }
     .navbar {
       background-color: black;
       height: 80px;
@@ -35,6 +38,7 @@
     .navbar-container {
       display: flex;
       justify-content: space-between;
+      margin: 0px 40px;
       align-items: center;
       height: 80px;
       max-width: 1500px;
@@ -224,7 +228,6 @@
         <div style="display: flex">
           <a href="/" class="nav-links">Home</a>
           <a href="#" class="nav-links">Details</a>
-          <a href="#" class="nav-links">Impetus</a>
           <a href="/incentives" class="nav-links">Incentives</a>
           <a href="/contactus" class="nav-links">Contact-us</a>
           <a href="/register" class="nav-links">Register</a>
