--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-235413499-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
